# libaux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
design/: string.md
include/: nstr.h  string.h  types.h
include/str/: ascii.h  misc.h  nstr.h  string.h  utf8.h
src/: string.c
src/str/: ascii.c  misc.c  nstr.c  string.c  utf8.c
test/: CMakeLists.txt
test/str/: ascii.c  misc.c  nstr.c  utf8.c
